# rt-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  RTEngine
src/: clr.c  clr.h  def.h  engine.c  engine.h  main.c  sdl.c  sdl.h  sph.c  sph.h  vec.c  vec.h  wrld.c  wrld.h
